err/xbmcswift2.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/cli'...
Compiling './lib/python3.5/site-packages/tests/cli/test_create.py'...
***   File "./lib/python3.5/site-packages/tests/cli/test_create.py", line 23
    print filename
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tests/test_plugin.py'...
***   File "./lib/python3.5/site-packages/tests/test_plugin.py", line 221
    print plugin.request.url
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tests/test_xbmcmixin.py'...
***   File "./lib/python3.5/site-packages/tests/test_xbmcmixin.py", line 426
    print items
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/xbmcswift2'...
Listing './lib/python3.5/site-packages/xbmcswift2/cli'...
Compiling './lib/python3.5/site-packages/xbmcswift2/cli/console.py'...
***   File "./lib/python3.5/site-packages/xbmcswift2/cli/console.py", line 49
    print '\n'.join(header + output)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xbmcswift2/cli/create.py'...
***   File "./lib/python3.5/site-packages/xbmcswift2/cli/create.py", line 84
    print validator.error_message
                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/xbmcswift2/cli/data'...
Listing './lib/python3.5/site-packages/xbmcswift2/cli/data/resources'...
Listing './lib/python3.5/site-packages/xbmcswift2/cli/data/resources/language'...
Listing './lib/python3.5/site-packages/xbmcswift2/cli/data/resources/language/English'...
Listing './lib/python3.5/site-packages/xbmcswift2/cli/data/resources/lib'...
Listing './lib/python3.5/site-packages/xbmcswift2/ext'...
Listing './lib/python3.5/site-packages/xbmcswift2/mockxbmc'...
Compiling './lib/python3.5/site-packages/xbmcswift2/mockxbmc/xbmc.py'...
***   File "./lib/python3.5/site-packages/xbmcswift2/mockxbmc/xbmc.py", line 17
    except OSError, exc:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xbmcswift2/plugin.py'...
***   File "./lib/python3.5/site-packages/xbmcswift2/plugin.py", line 318
    raise NotFoundException, 'No matching view found for %s' % path
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xbmcswift2/urls.py'...
***   File "./lib/python3.5/site-packages/xbmcswift2/urls.py", line 61
    except re.error, e:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/xbmcswift2-0.3.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
